# tabby-note

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  build.sh  default-template.jinja  install.sh  readme.md  test-script.sh
src/: cli.rs  main.rs  settings.rs  templating.rs  utils.rs
